# ip-labs-starter

./: .gitignore  CMakeLists.txt  README.md
include/: file-util.hh  image-util.hh  lab.hh  lab1.hh  portable-file-dialogs.h
src/: file-util.cpp  image-util.cpp  lab.cpp  lab1.cpp  main.cpp
